# maigent

./: .gitignore  LICENSE  README.md  codex_report_no_links.md  document.xlsx  manage.py  pyproject.toml
.codex_tmp/: dump_workbook.mjs  help_range.mjs  inspect_workbook.mjs  node_modules
.maigent/: AGENTS.md  AGENTS.sample.md  config.toml  config.yaml  config.yaml.sample
agent/: access.py  config.py  file_broker.py  logging.py  models.py  openai_client.py  prompt_loader.py  slash_commands.py  tests.py  tooling.py  urls.py  views.py
docs/: functions.md  prompt.md  security.md  yaml.md
maigent_web/: settings.py  urls.py  wsgi.py
prompt/: base_instructions.txt  dynamic_finalizer_instructions.txt  dynamic_finalizer_prompt.txt  dynamic_replanner_instructions.txt  dynamic_replanner_prompt.txt  evaluation_criteria.txt  file_batch_map_instructions.txt  file_batch_map_prompt.txt  final_evaluation_instructions.txt  final_evaluation_prompt.txt  initial_clarifier_instructions.txt  initial_clarifier_prompt.txt  multi_agent_synthesis_instructions.txt  rag_candidate_judge_instructions.txt  rag_candidate_judge_prompt.txt  rag_decision_instructions.txt  rag_decision_prompt.txt  (+3 more)
prompt backup/: base_instructions.txt  dynamic_finalizer_instructions.txt  dynamic_finalizer_prompt.txt  dynamic_replanner_prompt.txt  final_evaluation_instructions.txt  rag_candidate_judge_instructions.txt  rag_decision_instructions.txt  rag_decision_prompt.txt  retry_feedback_prefix.txt  sandbox_code_generation_instructions.txt  tool_selection_instructions.txt  tool_selection_prompt.txt
(+19 files in other folders)
