[project]
name = "maigent-agent-web"
version = "0.1.0"
description = "Local Django agent chat web app with project switching and OpenAI-compatible responses."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34.0",
    "django>=5.0,<6.0",
    "openai>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false
